Fixed an z-index issue with the new back button in posts.

--- a/_scss/_general.scss
+++ b/_scss/_general.scss
@@ -314,6 +314,7 @@ dl {
         right: 0;
         text-align: left;
         box-shadow: 0 .2rem 0 rgba(0, 0, 0, .2);
+        z-index: 10;
 
         li {
           background-color: #323740;
@@ -422,6 +423,7 @@ dl {
     .return-to-blog-link {
       background-color: rgba(255,255,255,.9);
       position: absolute;
+      z-index: 1;
       font-family: $font-ui-bold;
       text-transform: uppercase;
       line-height: 1;
